@@ -1143,9 +1143,10 @@ are identical).
 =item -
 
 The B<dh_auto_*> helpers now resets the environment variables B<HOME>
-and common B<XDG_*> variable.  B<HOME> and B<XDG_RUNTIME_DIR> are each
-set to a distinct writable directory. The rest of the environment
-variables are cleared.
+and common B<XDG_*> variable.  Please see description of the
+environment variables in L</ENVIRONMENT> for how this handled.
+
+I<This feature changed between between debhelper 13 and debhelper 13.2.>
 
 =item -
 
@@ -1482,12 +1483,13 @@ concrete variable directly.
 
 In compat 13 and later, these environment variables are reset before invoking
 the upstream build system via the B<dh_auto_*> helpers.  The variables B<HOME>
-and B<XDG_RUNTIME_DIR> will be set to a writable directory. The remaining
-variables will be cleared.
+(all B<dh_auto_*> helpers)and B<XDG_RUNTIME_DIR> (B<dh_auto_test> only) will
+be set to a writable directory. All remaining variables and B<XDG_RUNTIME_DIR>
+(except for during B<dh_auto_test>) will be cleared.
 
-The directories will be created as empty directories but they will be reused
-between calls to B<dh_auto_*>.  Any content will persist until explicitly
-deleted or B<dh_clean>.
+The B<HOME> directory will be created as an empty directory but it will be
+reused between calls to B<dh_auto_*>.  Any content will persist until
+explicitly deleted or B<dh_clean>.
 
 =item B<DEB_BUILD_OPTIONS>
 
